fix(badge): minor fix, add spacing between 2 badges

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,6 +127,7 @@ a:hover {
   background-color: var(--color-secondary-bg);
   color: var(--color-secondary);
   font-size: var(--font-size-small);
+  margin-right: 0.5rem;
   margin-bottom: .5rem;
   padding: .15rem .5rem;
 }
